<resources>
    <string name="app_name">Mindfulness</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button">Login</string>
    <string name="pleaseLogin">Please Login back</string>
    <string name="create_account_button">Sign up</string>
    <string name="next_button">Next</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_sleep_time">Sleep Timings</string>
    <string name="title_activity_lesson_time">Lesson Timings</string>
    <string name="title_activity_meditation_time">Meditation Timings</string>
    <string name="title_activity_getting_started">Getting Started</string>
    <string name="title_activity_response">Storing Responses</string>
    <string name="title_activity_research">Research Study</string>
    <string name="create_account_text">Create Account</string>
    <string name="not_a_member">Not a member?</string>
    <string name="continue_button">Continue</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="snooze">Snooze</string>
    <string name="submit_button">Submit</string>
    <string name="setup">Setup</string>
    <string name="pendingMorning">Pending Morning Assessment</string>
    <string name="pendingAfternoon">Pending Afternoon Assessment</string>
    <string name="timeForAssessment">It\'s time for a momentary evaluation!</string>
    <string name="readyToStartAssesssment">Are you ready to start the assessment?</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confim_password_text">Confirm Password</string>
    <string name="new_password_text">New Password</string>
    <string name="confim_new_password_text">Confirm New Password</string>
    <string name="email_text">Email</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="birthday_text">Birthday</string>
    <string name="age_text">Age</string>
    <string name="gender_text">Gender</string>
    <string name="research_study_text">Part of \nResearch Study?</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="other_text">Other</string>
    <string name="wake_up_text">I wake up at </string>
    <string name="go_to_sleep_text">I go to sleep at </string>
    <string name="wake_up_text_create_account">What time do you usually wake up in the morning?</string>
    <string name="go_to_sleep_text_create_account">What time do you usually go to sleep daily?</string>
    <string name="change_password_text">Change Password</string>
    <string name="log_out_text">Log Out</string>
    <string name="loggingIn">Logging In</string>
    <string name="creatingAccount">Creating Account</string>
    <string name="storingResponses">Storing Responses</string>
    <string name="loggingOut">Logging Out</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="resarch_study">Are you part of the research study?</string>
    <string name="resarch_study_info">Note: \nIf you choose to be part of research study, only then you will be receiving notifications for Daily Assessments.</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="meditations_text">Meditation Time</string>
    <string name="meditation">Meditation</string>
    <string name="lessons_text">Lessons Time</string>
    <string name="lessons_day_text">Lessons Day</string>
    <string name="meditations_text_create_account">What time do you want to meditate daily?</string>
    <string name="lessons_text_create_account">What time on that day would you like to receive the lesson?</string>
    <string name="lessons_day_text_create_account">What day would you like to receive your weekly lesson?</string>
    <string name="title_activity_lesson">Weekly Lesson</string>
    <string name="title_activity_assessment">Assessment</string>
    <string name="epilogue">Thank you.</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="welcome_msg">Welcome to “JustBe”</string>
     <string name="start_info">

This program is grounded in the latest research on mental and physical health. The goal is to teach you skills that help

First, do this little exercise: take two pencils, one in each hand, and place two pieces of paper in front of you. Close

your eyes and try not to think of anything. If a thought comes up, mark a tally on a paper near your right hand every

time it is about the future. Place a tally mark on the paper near your left hand if it is about the past. Do the exercise

for 1 minute, then open your eyes and count the marks.\r\n\r\n

Likely, your mind has jumped to the past or the future several times during the exercise. There is no inherent

problem with that. This program is not about changing your thoughts or emptying your mind. Instead, it is about

relating to your mind in a different way, understanding the nature of the mind-body connection and integrating your

experience into your daily life. You will do daily exercises that build awareness of your thoughts, feelings, and

physical sensations. These processes influence your day-to-day functioning and influence your life quality and

relationships with yourself, others and life in general.\r\n\r\n

Think of this example: you are at work and have mild symptoms of a headache. If these symptoms go unnoticed, it

can become a full-blown migraine, with irritation and discomfort. Another example: you are at home after work,

tired and a bit lonely. Without noticing, your turn on a TV and grab some food or a drink. After an hour or two you

This program won’t teach you how to change your lifestyle. In fact, it is not even designed to improve you in any way.

Instead, it will teach you three important tools: AWARENESS, NON-RESISTANCE and UNCONDITIONAL LOVE. Then,

you will be equipped to use these skills to live an authentic and harmonious life.\r\n\r\n

AWARENESS is objective information, unclouded by judgment. Imagine sitting with a friend and pouring your heart

out. Your friend listens with the utmost interest. She is eager to hear your voice and know everything about you but

won’t do anything with the information you share. She has NO RESISTANCE to anything you say and only listens and

accepts. When you pour your heart out, she knows your deepest worries, fears and desires and, with all that

knowledge, LOVES YOU UNCONDITIONALLY. She doesn’t care about changing or improving you in any way. She sees

Wouldn’t it be wonderful to have a friend like that? The good news is that YOU will become that friend to yourself.

With awareness, you will be able to see yourself, situations, and people around objectively. Without judgment and

with unconditional self-love, you won’t be motivated to make choices based on your external images or fears. With

love, you will be free to choose what the best option is for you and those around you. Without resistance, you will

build resilience to handle emotions, thoughts, and events coming your way.\r\n\r\n

This program is not a miracle, but it will equip you with important tools that can be applied daily. No intellectual

understanding can substitute your own experience and practice. If you don’t understand something or have

questions, that is normal; however, you need to bite an apple to know how it tastes and learn from your own

The program has eight modules that build on each other. Be patient as you practice the skills. Importantly, don’t get

disappointed if things go at a different pace than you expect – you will see, with practice, that the pace doesn’t make

a difference, the only metric of progress is your daily practice, no matter of its outcome. The program has two

components: guided meditations and daily applications to your life. Guided meditation is dedicated time to develop

new skills, and daily applications are opportunities to apply the skills to your life.\r\n\r\n\r\n

Enjoy your “JustBe” journey!\r\n\r\n

Communicate your feedback and questions to justbe@gmail.com\r\n\r\n


    </string>
    <string name="week_one_text">Week 1</string>
    <string name="week_two_text">Week 2</string>
    <string name="week_three_text">Week 3</string>
    <string name="week_four_text">Week 4</string>
    <string name="week_five_text">Week 5</string>
    <string name="week_six_text">Week 6</string>
    <string name="week_seven_text">Week 7</string>
    <string name="week_eight_text">Week 8</string>
    <string name="this_week_text">This Week</string>
    <string name="su_text">SU</string>
    <string name="m_text">M</string>
    <string name="t_text">T</string>
    <string name="th_text">TH</string>
    <string name="w_text">W</string>
    <string name="f_text">F</string>
    <string name="s_text">S</string>
    <string-array name="main_activity_days">
        <item>SU</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>TH</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Vestibulum pellentesque odio velit, at eleifend velit ultrices quis. Aliquam eu magna ante.
        Nam non ex felis. Quisque feugiat orci nec ornare tristique.
        Integer porta arcu erat, non commodo quam finibus sed.
        Donec posuere tortor nec tellus sagittis venenatis.
        Pellentesque vestibulum pellentesque nulla vel porta.
        Cras dapibus nulla sed mi hendrerit, in ullamcorper odio tincidunt.</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="user_data_error_title">Let\'s try that again</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="cant_login_to_new_account">We can\'t seem to be able to login to the account we just created</string>
    <string name="cannot_logout">Logout Failed</string>
    <string name="cannot_logout_message">Could not logout with the server</string>
    <string name="title_activity_smoke_assessment">SmokeAssessmentActivity</string>
    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_multi_choice_assessment">MultiChoiceAssessment</string>
    <string name="satisfactionQuestion">Today, I feel SATISFIED with my life</string>
    <string name="stressQuestion">Today, I feel STRESSED</string>
    <string name="anxietyQuestion">Today, I feel ANXIOUS</string>
    <string name="depressionQuestion">Today, I feel DEPRESSED</string>
    <string name="preoccupiedQuestion">Today, I feel PREOCCUPIED with past events</string>
    <string name="uncertaintyQuestion">Today, I feel UNCERTAIN about the future</string>
    <string name="incontrollQuestion">Today, I feel IN CONTROL</string>
    <string name="curiousityQuestion">Today, I feel CURIOUS</string>
    <string name="joyfulQuestion">Today, I feel JOYFUL</string>
    <string name="irritationQuestion">Today, I feel IRRITATED</string>
    <string name="energeticQuestion">Today, I feel ENERGETIC</string>
    <string name="peacefulQuestion">Today, I feel PEACEFUL</string>
    <string name="judgementalQuestion">Today, I feel JUDGEMENTAL</string>
    <string name="acceptingQuestion">Today, I feel ACCEPTING</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>