<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    android:paddingBottom="@dimen/activity_bottom_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_create_account"
    tools:context="justbe.mindfulnessapp.CreateAccountActivity">

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_text"
        android:focusable="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editUsername"
        android:layout_alignEnd="@+id/editUsername"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_text"/>

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editPassword"
        android:layout_alignEnd="@+id/editPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confim_password_text"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editConfirmPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editConfirmPassword"
        android:layout_alignEnd="@+id/editConfirmPassword"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email_text"/>
<!--
    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editEmail"
        android:layout_alignEnd="@+id/editEmail"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/first_name_text"/>

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editFirstName"
        android:layout_alignEnd="@+id/editFirstName"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/last_name_text"/>
-->
    <EditText
        android:id="@+id/editBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editEmail"
        android:layout_alignEnd="@+id/editEmail"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/birthday_text"/>

    <EditText
        android:id="@+id/editGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBirthday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editBirthday"
        android:layout_alignEnd="@+id/editBirthday"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/gender_text"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editGender"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="createAccountPressed"
        android:text="@string/create_account_button"/>

</RelativeLayout>
