<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="justbe.mindfulness.ResearchActivity"
        tools:showIn="@layout/activity_research">

        <TextView
            android:id="@+id/researchStudyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="106dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/resarch_study"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/researchStudy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="28dp"
                android:onClick="onResearchStudyButtonClicked"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginRight="90dp"
                android:checked="true"
                android:onClick="onResearchStudyButtonClicked"
                android:text="@string/no" />

        </RadioGroup>

        <TextView
            android:id="@+id/researchStudyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="107dp"
            android:padding="10dp"
            android:text="@string/resarch_study_info"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sleepNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:onClick="researchStudyNextButtonPressed"
            android:padding="12dp"
            android:text="@string/next_button" />

    </LinearLayout>
</ScrollView>
