<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_bottom_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="justbe.mindfulness.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password">

    <EditText
        android:id="@+id/editCurrentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:focusable="true"
        android:hint="@string/password_text" />

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editCurrentPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editCurrentPassword"
        android:layout_below="@+id/editCurrentPassword"
        android:ems="10"
        android:hint="@string/new_password_text"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editNewPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editNewPassword"
        android:layout_below="@+id/editNewPassword"
        android:ems="10"
        android:hint="@string/confim_new_password_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editConfirmNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="changePassword"
        android:text="@string/change_password_text" />

</RelativeLayout>
