<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    android:paddingBottom="@dimen/activity_bottom_margin"
    tools:context="justbe.mindfulnessapp.StartAssessmentActivity"
    tools:showIn="@layout/activity_start_assessment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/readyToStartAssesssment"
            android:textSize="@dimen/normal_text_size"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/yesButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="@dimen/normal_text_size"
                android:background="@color/colorPrimary"
                android:onClick="yesButtonPressed"/>
            <Button
                android:id="@+id/noButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/yesButton"
                android:layout_marginLeft="10dp"
                android:text="@string/no"
                android:textSize="@dimen/normal_text_size"
                android:background="@color/orange"
                android:onClick="noButtonPressed"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
